--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
+Rainer Gerhards <rgerhards@adiscon.com>
+
+With special thanks for the original json-c library:
 Michael Clark <michael@metaparadigm.com>
 Jehiah Czebotar <jehiah@gmail.com>
 Eric Haszlakiewicz <hawicz+json-c@gmail.com>
