--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.99.2 2016-03-07
 - new API: json_object_get_member_count()
+- make comaptible with autoconf < 2.64
 
 0.99.1
 was never released, but has accidently been used by some
