--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,17 @@
 0.99.3 2016-0?-??
+- removal of Windows and Android bits
+  Thanks to Michael Biebl for the patch.
+- fixes of the build system
+  Thanks to Michael Biebl for the patch.
 
 0.99.2 2016-03-07
 - new API: json_object_get_member_count()
 - make comaptible with autoconf < 2.64
 
 0.99.1
-was never released, but has accidently been used by some
-Adiscon packages. In order to prevent confusion, we have decided
-not to use this version number for any official version.
+was never released, but version number has accidently been used by
+some Adiscon packages. In order to prevent confusion, we have
+decided not to use this version number for any official version.
 
 0.99.0 2015-12-22
 - bugfix: reference counting was not thread-safe
