use configure VERSION in fjson_version() API
see also https://github.com/rsyslog/libfastjson/issues/11#issuecomment-206049907
closes https://github.com/rsyslog/libfastjson/issues/29

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 0.99.3 2016-0?-??
+- fjson_version now returns configure VERSION
+  This avoid inconsistency.
 - removal of Windows and Android bits
   Thanks to Michael Biebl for the patch.
 - fixes of the build system
