--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.99.3 2016-0?-??
+- new dependency: autoconf-archive
 - fjson_version now returns configure VERSION
   This avoid inconsistency.
 - removal of Windows and Android bits
@@ -7,6 +8,7 @@
   Thanks to Michael Biebl for the patch.
 - dropped support for Windows and Android as we do not target
   these platforms
+- "make distcheck" now works
 
 0.99.2 2016-03-07
 - new API: json_object_get_member_count()
