--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+0.99.5 2016-??-??
+- fix tautology comparison in tautology in `fjson_object_iter_equal`
 0.99.4 2016-08-03
 - fix tautology comparison in tautology in `fjson_object_iter_equal`
   Thanks to Andres Stieger for the patch
