--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,23 @@
 - fix tautology comparison in tautology in `fjson_object_iter_equal`
 - made to build under AIX
   Thanks to github user purnimam1 for the patch
+- m4: fix detection of atomics
+  In cross-compilation, it is impossible to run code at configure time to
+  detect the target specifics.
+  As such, AC_TRY_RUN fails miserably to detect reliably that atomic
+  intrisics are present in a toolchain, and decides they are not just
+  because this is cross-compilation.
+  Instead of AC_TRY_RUN, use AC_LINK_IFELSE that does not need to actually
+  run code, since all we're interested in is whether the intrisics are
+  present (or not). Fix both the 32- and 64-bit variants, even if the
+  latter is not used currently.
+  Fixes build failures detected by the Buildroot autobuilders, like:
+    http://autobuild.buildroot.org/results/23a/23ac0e742ed3a70ae4d038f8c9eadc23e708f671/build-end.log
+    http://autobuild.buildroot.org/results/192/1923d0b570adba494f83747a9610ea6ec35f5223/build-end.log
+  and many other cases, espcially on architectures where such intrsics are
+  present, but where the toolchain does not have threads (and anyway, it
+  is much more efficient to use the intrisics rather than use mutexes).
+  Thanks to Yann E. MORIN for the patch.
 
 0.99.4 2016-08-03
 - fix tautology comparison in tautology in `fjson_object_iter_equal`
