--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.99.5 2016-??-??
 - fix tautology comparison in tautology in `fjson_object_iter_equal`
+- made build under Solaris again
 - made to build under AIX
   Thanks to github user purnimam1 for the patch
 - fix floating point representation when fractional partis missing
