--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 0.99.6 2017-05-12
 - fix a build issue under Solaris
-
+- added option for case-insensitive comparisons
+  This permits to search for json keys in a case-sensitive way.
+  The default is "off", as this is against the JSON spec. However,
+  rsyslog needs this capability to increase usability inside the
+  variable system.
+  We add a new API call to switch between case-sensitive and
+  case-insensitive comparison, with case-sensitive being the default.
+  closes https://github.com/rsyslog/libfastjson/issues/142
 0.99.5 2017-05-03
 - fix tautology comparison in tautology in `fjson_object_iter_equal`
 - made build under Solaris again
