--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.99.8 2017-
+- make build under gcc7 with strict settings (warning==error)
 0.99.7 2017-10-17
 - added option for case-insensitive comparisons
   This permits to search for json keys in a case-sensitive way.
